508 contrast fix

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -83,12 +83,9 @@ a:focus {
   cursor: not-allowed;
 }
 
-.btn-primary-gradient {
+.btn-primary {
   color: #fff;
-  background: #007bff linear-gradient(180deg, #268fff, #007bff) repeat-x !important;
-  border-color: #007bff;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),
-    0 1px 1px rgba(0, 0, 0, 0.075);
+  background: #07648d;
 }
 
 .btn-silver {
@@ -152,30 +149,8 @@ a:focus {
   width: auto;
 }
 
-.nav-pills.nav-pills-inverse {
-  .nav-link {
-    color: white;
-  }
-
-  .nav-link.active {
-    background-color: #162e51;
-  }
-}
-
-.nav-pills.nav-pills-custom {
-  .nav-link {
-    color: white;
-  }
-
-  .nav-link {
-    background-color: #1a4480;
-    opacity: 0.7;
-  }
-
-  .nav-link.active {
-    // background-color: #e47833;
-    opacity: 1;
-  }
+a.nav-link.active {
+  background-color: #07648d !important;
 }
 
 .nav-tabs > .nav-item {
